@@ -465,8 +465,8 @@ create_sys_view (ProcData *procdata)
   	procman_get_tree_state (disk_tree, "/apps/procman/disktree");
   	
   	cb_update_disks (procdata);
-  	/*procdata->disk_timeout = gtk_timeout_add (procdata->config.disks_update_interval,
-  						  cb_update_disks, procdata);*/
+  	procdata->disk_timeout = gtk_timeout_add (procdata->config.disks_update_interval,
+  						  cb_update_disks, procdata);
  						  
 	return vpane;
 }
