@@ -1,5 +1,11 @@
 2001-11-12  Kevin Vandersloot <kfv101@psu.edu>
 
+	* callbacks.c: update the disks properly instead of just clearing
+	the table on every update. Bug when removing an item though.
+	I think it is a treeview bug
+
+2001-11-12  Kevin Vandersloot <kfv101@psu.edu>
+
 	* proctable.c: fix bug correctly with respect to child
 	processes and whether or not a process is a thread
 
